Fix #1487

Don't use an object after releasing it